--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ h1 {
   margin: 10px 0;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
+  word-wrap: break-word;
   text-align: justify;
   border: 2px solid black;
 }
